--- a/HTML/SHOP_PRIDE.html
+++ b/HTML/SHOP_PRIDE.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/SHOP_PEONIES.css">
+    <link rel="stylesheet" href="../CSS/SHOP_PRIDE.css">
 </head>
 <body>
      <div class="top-banner">
@@ -176,8 +176,8 @@ All Flowers</a>
 
 
       <div class="parents_5">
-        <p class="Summer_text">Peonies and Peony Bouquets</p>
-        <p class="Summer_text_2"><p>Peony bouquets are a lovely way to show a friend or loved one that you’re thinking of them. From classic pink and white to more exotic hues like coral and</p><p>mahogany, these blooms are bursting with personality, color, and fragrance, and sure to bring a smile to your special someone’s face. Send peonies today</p><p> to brighten someone’s day or plan ahead for your big day. Whatever you need, Proflowers has you covered with fast, high-quality flower delivery and an</p> assortment of arrangements to choose from.
+        <p class="Summer_text">Celebrate Pride with Flowers and Gifts</p>
+        <p class="Summer_text_2"><p>Share your pride with the world and celebrate all LGBTQ+ identities with an array of stunning floral arrangements from Proflowers. Whether</p><p> you’re looking for colorful floral creations, perfect potted plants, gorgeous gift baskets or delicious sweets and treats, you can find your</p><p>perfect Pride gifts online and get them delivered right to your home all month long. Let creativity take the reins when shopping for Pride gifts</p> online by mixing and matching florals that speak to you—the only rules are that there are no rules!
       </div>
 
 
@@ -246,28 +246,28 @@ All Flowers</a>
 
   <div class="summer_parents">
     <div class="A">
-  <img src="../Flowerimg/R5661D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
+  <img src="../Flowerimg/D32D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
-  <p class="summar_text">Lucky Lily Bouquet</p>
-  <p class="summar_text_1">$55 - $95</p>
+  <p class="summar_text">Color of Love Bouquet</p>
+  <p class="summar_text_1">$85 - $115</p>
  </div>
 
 
  <div class="summer_parents">
    <div class="A">
-  <img src="../Flowerimg/R5544P_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
+  <img src="../Flowerimg/BD21_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
-  <p class="summar_text">Sweet As Can Be Bouquet</p>
-  <p class="summar_text_1">$55 - $75</p>
+  <p class="summar_text">Rainbow Rose Bouquet</p>
+  <p class="summar_text_1">$63 - $93</p>
  </div>
 
   <div class="summer_parents">
     <div class="A">
-  <img src="../Flowerimg/R5556D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
+  <img src="../Flowerimg/GE74_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
     </div>
 
-  <p class="summar_text">Neon Lights Bouquet</p>
-  <p class="summar_text_1">$55 - $85</p>
+  <p class="summar_text">Belgian Chocolate Dipped <br>Oreo® Cookies</p>
+  <p class="summar_text_1">$55</p>
  </div>
 
 </div>
@@ -277,30 +277,30 @@ All Flowers</a>
 
    <div class="summer_parents-1">
     <div class="B">
-  <img src="../Flowerimg/R5549D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
+  <img src="../Flowerimg/P4251_LOL_preset_proflowers-mx-tile-wide-sv-new (1).webp" class="summer_img-1">
   </div>
-  <p class="summar_text_2">Lucky Lily Bouquet</p>
-  <p class="summar_text_3">$55 - $95</p>
+  <p class="summar_text_2">Rainbow Garden of Blooms</p>
+  <p class="summar_text_3">$95</p>
  </div>
 
 
 
  <div class="summer_parents-1">
     <div class="B">
-  <img src="../Flowerimg/FM079_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
+  <img src="../Flowerimg/GE303_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
-  <p class="summar_text_2">Cotton Candy Peony Bouquet</p>
-  <p class="summar_text_3">$75 - $85</p>
+  <p class="summar_text_2">Love Belgian Chocolate Covered<br> OREO®Cookies</p>
+  <p class="summar_text_3">$55</p>
  </div>
 
 
 
  <div class="summer_parents-1">
     <div class="B">
-  <img src="../Flowerimg/V5762D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
+  <img src="../Flowerimg/FO6D_LOL_preset_proflowers-mx-tile-wide-sv-new.jpg" class="summer_img-1">
   </div>
-  <p class="summar_text_2">Paloma Please Bouquet</p>
-  <p class="summar_text_3">$60 - $120</p>
+  <p class="summar_text_2">Summer Spectra - A Florist Original</p>
+  <p class="summar_text_3">$45 - $90</p>
  </div>
 
 
@@ -311,28 +311,28 @@ All Flowers</a>
 
   <div class="summer_parents-2">
     <div class="C">
-  <img src="../Flowerimg/FE84_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
+  <img src="../Flowerimg/J-6022P_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
-  <p class="summar_text_4">Red Rose Bouquet</p>
-  <p class="summar_text_5">$45 - $92</p>
+  <p class="summar_text_4">Regal Jewel – A Florist Original</p>
+  <p class="summar_text_5">$45 - $90</p>
  </div>
 
 
  <div class="summer_parents-2">
     <div class="C">
-  <img src="../Flowerimg/FW90_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
+  <img src="../Flowerimg/P-6022D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
-  <p class="summar_text_4">Mixed Roses</p>
-  <p class="summar_text_5">$45 - $77</p>
+  <p class="summar_text_4">Dreamy Pastels – A Florist Original</p>
+  <p class="summar_text_5">$45 - $90</p>
  </div>
 
 
   <div class="summer_parents-2">
     <div class="C">
-  <img src="../Flowerimg/V1PKP_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
+  <img src="../Flowerimg/FK1060_LAY_preset_proflowers-mx-tile-wide-sv-lay.webp" class="summer_img-2">
   </div>
-  <p class="summar_text_4">Picture Perfect Pink Rose Bouquet</p>
-  <p class="summar_text_5">$85 - $200</p>
+  <p class="summar_text_4">Lavender Fields Mixed <br>Flower Bouquet</p>
+  <p class="summar_text_5">$50 - $75</p>
  </div>
 
 </div>
