--- a/HTML/index.html
+++ b/HTML/index.html
@@ -502,7 +502,11 @@ All Flowers</a>
       <div class="section_2">
        <p class="bpl_text">bursting  with pride</p>
        <p class="bpl_txt_1">Pride gifts and flowers full of color that they'|| love.</p>
+
+       <a href="../HTML/SHOP_PRIDE.html">
         <button class="button_7">SHOP PRIDE</button>
+        </a>
+        
       </div>
 </div>
 
