--- a/HTML/Summar_flower.html
+++ b/HTML/Summar_flower.html
@@ -188,7 +188,7 @@ All Flowers</a>
     <div class="dropdown-content">
       <label><input type="checkbox"> Relevance</label>
       <label><input type="checkbox"> Lowest Price</label>
-      <label><input type="checkbox"> Lowest Price</label>
+      <label><input type="checkbox"> Highest Price</label>
     </div>
   </div>
 
