--- a/Summar_flower.html
+++ b/Summar_flower.html
@@ -245,9 +245,13 @@ All Flowers</a>
 <div class="parents_7">
 
   <div class="summer_parents">
+
+    <a href="../../../../SUMMAR_HTML/summarf1.html">
     <div class="A">
   <img src="../Flowerimg/R5661D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
+  </a>
+  
   <p class="summar_text">Lucky Lily Bouquet</p>
   <p class="summar_text_1">$55 - $95</p>
  </div>
