--- a/Summar_flower.html
+++ b/Summar_flower.html
@@ -251,25 +251,32 @@ All Flowers</a>
   <img src="../Flowerimg/R5661D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
   </a>
-  
+
   <p class="summar_text">Lucky Lily Bouquet</p>
   <p class="summar_text_1">$55 - $95</p>
  </div>
 
 
  <div class="summer_parents">
+
+  <a href="../../../../SUMMAR_HTML/summarf2.html">
    <div class="A">
   <img src="../Flowerimg/R5544P_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
+  </a>
+
   <p class="summar_text">Sweet As Can Be Bouquet</p>
   <p class="summar_text_1">$55 - $75</p>
  </div>
 
   <div class="summer_parents">
+
+    <a href="../../../../SUMMAR_HTML/summarf3.html">
     <div class="A">
   <img src="../Flowerimg/R5556D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
     </div>
-
+    </a>
+    
   <p class="summar_text">Neon Lights Bouquet</p>
   <p class="summar_text_1">$55 - $85</p>
  </div>
