--- a/Summar_flower.html
+++ b/Summar_flower.html
@@ -276,7 +276,7 @@ All Flowers</a>
   <img src="../Flowerimg/R5556D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
     </div>
     </a>
-    
+
   <p class="summar_text">Neon Lights Bouquet</p>
   <p class="summar_text_1">$55 - $85</p>
  </div>
@@ -287,9 +287,13 @@ All Flowers</a>
 <div class="parents_8">
 
    <div class="summer_parents-1">
+
+    <a href="../../../../SUMMAR_HTML/summarf4.html">
     <div class="B">
   <img src="../Flowerimg/R5549D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
   <p class="summar_text_2">Lucky Lily Bouquet</p>
   <p class="summar_text_3">$55 - $95</p>
  </div>
@@ -297,9 +301,13 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../SUMMAR_HTML/summarf5.html">
     <div class="B">
   <img src="../Flowerimg/FM079_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
   <p class="summar_text_2">Cotton Candy Peony Bouquet</p>
   <p class="summar_text_3">$75 - $85</p>
  </div>
@@ -307,9 +315,14 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../SUMMAR_HTML/summarf6.html">
     <div class="B">
   <img src="../Flowerimg/V5762D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
+
   <p class="summar_text_2">Paloma Please Bouquet</p>
   <p class="summar_text_3">$60 - $120</p>
  </div>
@@ -321,27 +334,40 @@ All Flowers</a>
 <div class="parents_9">
 
   <div class="summer_parents-2">
+
+    <a href="../../../../SUMMAR_HTML/summarf7.html">
     <div class="C">
   <img src="../Flowerimg/FE84_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
   <p class="summar_text_4">Red Rose Bouquet</p>
   <p class="summar_text_5">$45 - $92</p>
  </div>
 
 
  <div class="summer_parents-2">
+
+  <a href="../../../../SUMMAR_HTML/summarf8.html">
     <div class="C">
   <img src="../Flowerimg/FW90_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
   <p class="summar_text_4">Mixed Roses</p>
   <p class="summar_text_5">$45 - $77</p>
  </div>
 
 
   <div class="summer_parents-2">
+
+    <a href="../../../../SUMMAR_HTML/summarf9.html">
     <div class="C">
   <img src="../Flowerimg/V1PKP_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
+  
   <p class="summar_text_4">Picture Perfect Pink Rose Bouquet</p>
   <p class="summar_text_5">$85 - $200</p>
  </div>
