--- a/graduation.html
+++ b/graduation.html
@@ -245,26 +245,39 @@ All Flowers</a>
 <div class="parents_7">
 
   <div class="summer_parents">
+
+    <a href="../../../../GRADUATION_HTML/GVS1.html">
     <div class="A">
   <img src="../Flowerimg/PRPINK24_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
+  </a>
+
+
   <p class="summar_text">Pink Forever Roses</p>
   <p class="summar_text_1">$75 - $260</p>
  </div>
 
 
  <div class="summer_parents">
+
+  <a href="../../../../GRADUATION_HTML/GAS2.html">
    <div class="A">
   <img src="../Flowerimg/PRLAV24_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
+  </a>
+
   <p class="summar_text">Lavender Forever Rose</p>
   <p class="summar_text_1">$75 - $260</p>
  </div>
 
   <div class="summer_parents">
+
+    <a href="../../../../GRADUATION_HTML/GAS3.html">
     <div class="A">
   <img src="../Flowerimg/PRRED24_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
     </div>
+  </a>
+
 
   <p class="summar_text">Red Forever Roses</p>
   <p class="summar_text_1">$75 - $260</p>
@@ -276,9 +289,13 @@ All Flowers</a>
 <div class="parents_8">
 
    <div class="summer_parents-1">
+
+    <a href="../../../../GRADUATION_HTML/GAS4.html">
     <div class="B">
   <img src="../Flowerimg/C5375CHD_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
   <p class="summar_text_2">Light of My Life Bouquet and<br> Chocolate Bundle</p>
   <p class="summar_text_3">$73 - $128</p>
  </div>
@@ -286,9 +303,13 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../GRADUATION_HTML/GAS5.html">
     <div class="B">
   <img src="../Flowerimg/E5440D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
   <p class="summar_text_2">Long Stem Pink Rose Bouquet</p>
   <p class="summar_text_3">$75 - $200</p>
  </div>
@@ -296,9 +317,14 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../GRADUATION_HTML/GAS6.html">
     <div class="B">
   <img src="../Flowerimg/B59ECH_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+</a>
+
+
   <p class="summar_text_2">Romantic Long Stem Red Rose<br> Bouquet Bundles</p>
   <p class="summar_text_3">$100 - $225</p>
  </div>
@@ -310,27 +336,39 @@ All Flowers</a>
 <div class="parents_9">
 
   <div class="summer_parents-2">
+
+     <a href="../../../../GRADUATION_HTML/GAS7.html">
     <div class="C">
   <img src="../Flowerimg/FV037D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
   <p class="summar_text_4">Love on the Line Calla Lily Bouquet</p>
   <p class="summar_text_5">$50 - $80</p>
  </div>
 
 
  <div class="summer_parents-2">
+
+  <a href="../../../../GRADUATION_HTML/GAS8.html">
     <div class="C">
   <img src="../Flowerimg/FW90_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
   <p class="summar_text_4">Mixed Roses</p>
   <p class="summar_text_5">$45 - $77</p>
  </div>
 
 
   <div class="summer_parents-2">
+
+    <a href="../../../../GRADUATION_HTML/GAS9.html">
     <div class="C">
   <img src="../Flowerimg/V1PKP_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+  
   <p class="summar_text_4">Picture Perfect Pink Rose Bouquet</p>
   <p class="summar_text_5">$85 - $200</p>
  </div>
