--- a/Local_shop.html
+++ b/Local_shop.html
@@ -245,26 +245,37 @@ All Flowers</a>
 <div class="parents_7">
 
   <div class="summer_parents">
+
+    <a href="../../../../LOCALSHOP_HTML/LS1.html">
     <div class="A">
   <img src="../Flowerimg/S5492E_LOL_preset_proflowers-mx-tile-wide-sv-new.jpg" class="summer_img">
   </div>
+  </a>
+
   <p class="summar_text">Tender Embrace Bundles</p>
   <p class="summar_text_1">$195 - $820</p>
  </div>
 
 
  <div class="summer_parents">
+
+  <a href="../../../../LOCALSHOP_HTML/LS2.html">
    <div class="A">
   <img src="../Flowerimg/S5488G_LOL_preset_proflowers-mx-tile-wide-sv-new.jpg" class="summer_img">
   </div>
+  </a>
+
   <p class="summar_text">Bountiful Blooms Bundles</p>
   <p class="summar_text_1">$305 - $815</p>
  </div>
 
   <div class="summer_parents">
+       
+    <a href="../../../../LOCALSHOP_HTML/LS3.html">
     <div class="A">
   <img src="../Flowerimg/S5491E_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
     </div>
+   </a>
 
   <p class="summar_text">Blessings of Memory Bundles</p>
   <p class="summar_text_1">$190 - $810</p>
@@ -276,9 +287,13 @@ All Flowers</a>
 <div class="parents_8">
 
    <div class="summer_parents-1">
+
+    <a href="../../../../LOCALSHOP_HTML/LS4.html">
     <div class="B">
   <img src="../Flowerimg/S21-4484_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
   <p class="summar_text_2">Loving Remembrance Wreath</p>
   <p class="summar_text_3">$350</p>
  </div>
@@ -286,9 +301,13 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../LOCALSHOP_HTML/LS5.html">
     <div class="B">
   <img src="../Flowerimg/S15-4470D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
   <p class="summar_text_2">Blessed with Love Arrangement</p>
   <p class="summar_text_3">$225 - $325</p>
  </div>
@@ -296,9 +315,13 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../LOCALSHOP_HTML/LS6.html">
     <div class="B">
   <img src="../Flowerimg/S5280S_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
   <p class="summar_text_2">Calming Colors Wreath</p>
   <p class="summar_text_3">$250</p>
  </div>
@@ -310,27 +333,39 @@ All Flowers</a>
 <div class="parents_9">
 
   <div class="summer_parents-2">
+
+    <a href="../../../../LOCALSHOP_HTML/LS7.html">
     <div class="C">
   <img src="../Flowerimg/S5274S_LOL_preset_proflowers-mx-tile-wide-sv-new.jpg" class="summer_img-2">
   </div>
+  </a>
+
   <p class="summar_text_4">Treasured Love Standing Heart</p>
   <p class="summar_text_5">$250</p>
  </div>
 
 
  <div class="summer_parents-2">
+
+  <a href="../../../../LOCALSHOP_HTML/LS8.html">
     <div class="C">
   <img src="../Flowerimg/S44-5024S_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
   <p class="summar_text_4">Faithful Hero Floral Cross</p>
   <p class="summar_text_5">$275</p>
  </div>
 
 
   <div class="summer_parents-2">
+
+    <a href="../../../../LOCALSHOP_HTML/LS9.html">
     <div class="C">
   <img src="../Flowerimg/S2-4439_LOL_preset_proflowers-mx-tile-wide-sv-new.jpg" class="summer_img-2">
   </div>
+  </a>
+  
   <p class="summar_text_4">Elegant Remembrance Standing <br>Heart</p>
   <p class="summar_text_5">$400</p>
  </div>
