--- a/SUMMAR_HTML/summarf9.html
+++ b/SUMMAR_HTML/summarf9.html
@@ -170,7 +170,7 @@ All Flowers</a>
      <div class="parents_4">
 
       <p class="p1">SAME DAY DELIVERY</p>
-      <p class="p2">Picture Perfect Pink Rose Bouquet $200</p>
+      <p class="p2">Picture Perfect Pink Rose<br> Bouquet $200</p>
       <p class="p3">SIZE INFORMATION:</p>
 
       <div class="griddiv">
