--- a/SHOP_PEONIES.html
+++ b/SHOP_PEONIES.html
@@ -245,26 +245,37 @@ All Flowers</a>
 <div class="parents_7">
 
   <div class="summer_parents">
+
+    <a href="../../../../SUMMAR_HTML/summarf1.html">
     <div class="A">
   <img src="../Flowerimg/R5661D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
+  </a>
+
   <p class="summar_text">Lucky Lily Bouquet</p>
   <p class="summar_text_1">$55 - $95</p>
  </div>
 
 
  <div class="summer_parents">
+
+  <a href="../../../../SUMMAR_HTML/summarf2.html">
    <div class="A">
   <img src="../Flowerimg/R5544P_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
+  </a>
+
   <p class="summar_text">Sweet As Can Be Bouquet</p>
   <p class="summar_text_1">$55 - $75</p>
  </div>
 
   <div class="summer_parents">
+
+    <a href="../../../../SUMMAR_HTML/summarf3.html">
     <div class="A">
   <img src="../Flowerimg/R5556D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
     </div>
+  </a>
 
   <p class="summar_text">Neon Lights Bouquet</p>
   <p class="summar_text_1">$55 - $85</p>
@@ -276,9 +287,13 @@ All Flowers</a>
 <div class="parents_8">
 
    <div class="summer_parents-1">
+
+    <a href="../../../../SUMMAR_HTML/summarf4.html">
     <div class="B">
   <img src="../Flowerimg/R5549D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
   <p class="summar_text_2">Lucky Lily Bouquet</p>
   <p class="summar_text_3">$55 - $95</p>
  </div>
@@ -286,9 +301,13 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../SUMMAR_HTML/summarf5.html">
     <div class="B">
   <img src="../Flowerimg/FM079_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+</a>
+
   <p class="summar_text_2">Cotton Candy Peony Bouquet</p>
   <p class="summar_text_3">$75 - $85</p>
  </div>
@@ -296,9 +315,13 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../SUMMAR_HTML/summarf6.html">
     <div class="B">
   <img src="../Flowerimg/V5762D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
   <p class="summar_text_2">Paloma Please Bouquet</p>
   <p class="summar_text_3">$60 - $120</p>
  </div>
@@ -310,27 +333,42 @@ All Flowers</a>
 <div class="parents_9">
 
   <div class="summer_parents-2">
+
+    <a href="../../../../SUMMAR_HTML/summarf7.html">
     <div class="C">
   <img src="../Flowerimg/FE84_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
+
   <p class="summar_text_4">Red Rose Bouquet</p>
   <p class="summar_text_5">$45 - $92</p>
  </div>
 
 
  <div class="summer_parents-2">
+
+  <a href="../../../../SUMMAR_HTML/summarf8.html">
     <div class="C">
   <img src="../Flowerimg/FW90_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
+
   <p class="summar_text_4">Mixed Roses</p>
   <p class="summar_text_5">$45 - $77</p>
  </div>
 
 
   <div class="summer_parents-2">
+
+    <a href="../../../../SUMMAR_HTML/summarf9.html">
     <div class="C">
   <img src="../Flowerimg/V1PKP_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
+  
   <p class="summar_text_4">Picture Perfect Pink Rose Bouquet</p>
   <p class="summar_text_5">$85 - $200</p>
  </div>
