--- a/SHOP_PRIDE.html
+++ b/SHOP_PRIDE.html
@@ -245,26 +245,38 @@ All Flowers</a>
 <div class="parents_7">
 
   <div class="summer_parents">
+
+    <a href="../../../../PRIDE_HTML/PRIDE.html">
     <div class="A">
   <img src="../Flowerimg/D32D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
+  </a>
+
   <p class="summar_text">Color of Love Bouquet</p>
   <p class="summar_text_1">$85 - $115</p>
  </div>
 
 
  <div class="summer_parents">
+
+  <a href="../../../../PRIDE_HTML/PRIDE2.html">
    <div class="A">
   <img src="../Flowerimg/BD21_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
+  </a>
+
   <p class="summar_text">Rainbow Rose Bouquet</p>
   <p class="summar_text_1">$63 - $93</p>
  </div>
 
   <div class="summer_parents">
+
+    <a href="../../../../PRIDE_HTML/PRIDE3.html">
     <div class="A">
   <img src="../Flowerimg/GE74_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
     </div>
+    </a>
+
 
   <p class="summar_text">Belgian Chocolate Dipped <br>Oreo® Cookies</p>
   <p class="summar_text_1">$55</p>
@@ -276,9 +288,14 @@ All Flowers</a>
 <div class="parents_8">
 
    <div class="summer_parents-1">
+
+    <a href="../../../../PRIDE_HTML/PRIDE4.html">
     <div class="B">
   <img src="../Flowerimg/P4251_LOL_preset_proflowers-mx-tile-wide-sv-new (1).webp" class="summer_img-1">
   </div>
+  </a>
+
+
   <p class="summar_text_2">Rainbow Garden of Blooms</p>
   <p class="summar_text_3">$95</p>
  </div>
@@ -286,9 +303,14 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../PRIDE_HTML/PRIDE5.html">
     <div class="B">
   <img src="../Flowerimg/GE303_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
+
   <p class="summar_text_2">Love Belgian Chocolate Covered<br> OREO®Cookies</p>
   <p class="summar_text_3">$55</p>
  </div>
@@ -296,9 +318,14 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../PRIDE_HTML/PRIDE6.html">
     <div class="B">
   <img src="../Flowerimg/FO6D_LOL_preset_proflowers-mx-tile-wide-sv-new.jpg" class="summer_img-1">
   </div>
+  </a>
+
+
   <p class="summar_text_2">Summer Spectra - A Florist Original</p>
   <p class="summar_text_3">$45 - $90</p>
  </div>
@@ -310,27 +337,39 @@ All Flowers</a>
 <div class="parents_9">
 
   <div class="summer_parents-2">
+
+    <a href="../../../../PRIDE_HTML/PRIDE.html">
     <div class="C">
   <img src="../Flowerimg/J-6022P_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
   <p class="summar_text_4">Regal Jewel – A Florist Original</p>
   <p class="summar_text_5">$45 - $90</p>
  </div>
 
 
  <div class="summer_parents-2">
+
+     <a href="../../../../PRIDE_HTML/PRIDE8.html">
     <div class="C">
   <img src="../Flowerimg/P-6022D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
   <p class="summar_text_4">Dreamy Pastels – A Florist Original</p>
   <p class="summar_text_5">$45 - $90</p>
  </div>
 
 
   <div class="summer_parents-2">
+
+    <a href="../../../../PRIDE_HTML/PRIDE9.html">
     <div class="C">
   <img src="../Flowerimg/FK1060_LAY_preset_proflowers-mx-tile-wide-sv-lay.webp" class="summer_img-2">
   </div>
+  </a>
+  
   <p class="summar_text_4">Lavender Fields Mixed <br>Flower Bouquet</p>
   <p class="summar_text_5">$50 - $75</p>
  </div>
