--- a/MODERN_HTML/MF8.html
+++ b/MODERN_HTML/MF8.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../MODERN_CSS/MF3.css">
+    <link rel="stylesheet" href="../MODERN_CSS/MF8.css">
 </head>
 <body>
      <div class="top-banner">
@@ -162,7 +162,7 @@ All Flowers</a>
 
     <div class="parents_3">
       <div class="Z">
-   <img src="../Flowerimg/V5761D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
+  <img src="../Flowerimg/FE215D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
        </div>
        
     </div>
@@ -170,7 +170,7 @@ All Flowers</a>
      <div class="parents_4">
 
       <p class="p1">SAME DAY DELIVERY</p>
-      <p class="p2">Renaissance Luxury Bouquet<br> $120</p>
+      <p class="p2">Dressed Up Anemone Bouquet<br> $80</p>
       <p class="p3">SIZE INFORMATION:</p>
 
       <div class="griddiv">
