--- a/Modern_flower.html
+++ b/Modern_flower.html
@@ -245,26 +245,37 @@ All Flowers</a>
 <div class="parents_7">
 
   <div class="summer_parents">
+
+    <a href="../../../../MODERN_HTML/MF1.html">
     <div class="A">
   <img src="../Flowerimg/FV037D_LOL_preset_proflowers-mx-tile-wide-sv-new (1).webp" class="summer_img">
   </div>
+  </a>
+
   <p class="summar_text">Love on the Line Calla Lily Bouquet</p>
   <p class="summar_text_1">$50 - $80</p>
  </div>
 
 
  <div class="summer_parents">
+
+  <a href="../../../../MODERN_HTML/MF2.html">
    <div class="A">
   <img src="../Flowerimg/CCDD_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
+  </a>
+
   <p class="summar_text">Getaway Bouquet</p>
   <p class="summar_text_1">$70 - $130</p>
  </div>
 
   <div class="summer_parents">
+
+    <a href="../../../../MODERN_HTML/MF3.html">
     <div class="A">
   <img src="../Flowerimg/V5761D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
     </div>
+    </a>
 
   <p class="summar_text">Renaissance Luxury Bouquet</p>
   <p class="summar_text_1">$120 - $150</p>
@@ -276,9 +287,13 @@ All Flowers</a>
 <div class="parents_8">
 
    <div class="summer_parents-1">
+
+    <a href="../../../../MODERN_HTML/MF4.html">
     <div class="B">
   <img src="../Flowerimg/FE211DWF_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
   <p class="summar_text_2">Touch of Honey Anemone Bouquet</p>
   <p class="summar_text_3">$60 - $95</p>
  </div>
@@ -286,9 +301,13 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../MODERN_HTML/MF5.html">
     <div class="B">
   <img src="../Flowerimg/R5654D_CLEAR_LOL_preset_proflowers-mx-tile-wide-sv-new (1).webp" class="summer_img-1">
   </div>
+  </a>
+
   <p class="summar_text_2">Grapeful Bouquet</p>
   <p class="summar_text_3">$55 - $100</p>
  </div>
@@ -296,9 +315,13 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../MODERN_HTML/MF6.html">
     <div class="B">
   <img src="../Flowerimg/V5767D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
   <p class="summar_text_2">From Scratch Luxury Bouquet</p>
   <p class="summar_text_3">$120 - $150</p>
  </div>
@@ -310,27 +333,39 @@ All Flowers</a>
 <div class="parents_9">
 
   <div class="summer_parents-2">
+
+    <a href="../../../../MODERN_HTML/MF7.html">
     <div class="C">
   <img src="../Flowerimg/FE228D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+  
   <p class="summar_text_4">Mesmerizing Ranunculus Bouquet</p>
   <p class="summar_text_5">$65 - $100</p>
  </div>
 
 
  <div class="summer_parents-2">
+
+  <a href="../../../../MODERN_HTML/MF8.html">
     <div class="C">
   <img src="../Flowerimg/FE215D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
   <p class="summar_text_4">Dressed Up Anemone Bouquet</p>
   <p class="summar_text_5">$55 - $85</p>
  </div>
 
 
   <div class="summer_parents-2">
+
+    <a href="../../../../MODERN_HTML/MF9.html">
     <div class="C">
   <img src="../Flowerimg/V5764D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+  
   <p class="summar_text_4">Slow Mornings Bouquet</p>
   <p class="summar_text_5">$55 - $120</p>
  </div>
