--- a/Shop_brithday.html
+++ b/Shop_brithday.html
@@ -245,26 +245,38 @@ All Flowers</a>
 <div class="parents_7">
 
   <div class="summer_parents">
+
+    <a href="../../../../BRITHDAY_HTML/BS.html">
     <div class="A">
   <img src="../Flowerimg/FE211DWF_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
+  </a>
+
   <p class="summar_text">Touch of Honey Anemone<br> Bouquet</p>
   <p class="summar_text_1">$60 - $95</p>
  </div>
 
 
  <div class="summer_parents">
+
+  <a href="../../../../BRITHDAY_HTML/BS2.html">
    <div class="A">
   <img src="../Flowerimg/FM071D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
+  </a>
+  
   <p class="summar_text">Free Spirit Bouquet</p>
   <p class="summar_text_1">$55 - $85</p>
  </div>
 
   <div class="summer_parents">
+
+    <a href="../../../../BRITHDAY_HTML/BS3.html">
     <div class="A">
   <img src="../Flowerimg/EO-6022D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
     </div>
+    </a>
+
 
   <p class="summar_text">Florist Original Mixed Bouquet</p>
   <p class="summar_text_1">$40 - $85</p>
@@ -276,9 +288,13 @@ All Flowers</a>
 <div class="parents_8">
 
    <div class="summer_parents-1">
+
+    <a href="../../../../BRITHDAY_HTML/BS4.html">
     <div class="B">
   <img src="../Flowerimg/MTA30_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+  
   <p class="summar_text_2">Picnic Tulips</p>
   <p class="summar_text_3">$50 - $80</p>
  </div>
@@ -286,9 +302,14 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../BRITHDAY_HTML/BS5.html">
     <div class="B">
   <img src="../Flowerimg/R5617D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
+
   <p class="summar_text_2">Zest for Life Bouquet</p>
   <p class="summar_text_3">$60 - $85</p>
  </div>
@@ -296,9 +317,13 @@ All Flowers</a>
 
 
  <div class="summer_parents-1">
+
+  <a href="../../../../BRITHDAY_HTML/BS6.html">
     <div class="B">
   <img src="../Flowerimg/R5614D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
+  </a>
+
   <p class="summar_text_2">Fanciful Blossoms Bouquet</p>
   <p class="summar_text_3">$50 - $70</p>
  </div>
@@ -310,27 +335,39 @@ All Flowers</a>
 <div class="parents_9">
 
   <div class="summer_parents-2">
+
+    <a href="../../../../BRITHDAY_HTML/BS7.html">
     <div class="C">
   <img src="../Flowerimg/BD7D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
   <p class="summar_text_4">Birthday Surprise Bouquet</p>
   <p class="summar_text_5">$55 - $80</p>
  </div>
 
 
  <div class="summer_parents-2">
+
+  <a href="../../../../BRITHDAY_HTML/BS8.html">
     <div class="C">
   <img src="../Flowerimg/R5654D_CLEAR_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+
   <p class="summar_text_4">Grapeful Bouquet</p>
   <p class="summar_text_5">$55 - $100</p>
  </div>
 
 
   <div class="summer_parents-2">
+
+    <a href="../../../../BRITHDAY_HTML/BS9.html">
     <div class="C">
   <img src="../Flowerimg/R5544D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
+  </a>
+  
   <p class="summar_text_4">Sweet As Can Be Bouquet</p>
   <p class="summar_text_5">$55 - $75</p>
  </div>
