--- a/FARTHAR_GIFT_HTML/FDG5.html
+++ b/FARTHAR_GIFT_HTML/FDG5.html
@@ -170,7 +170,7 @@ All Flowers</a>
      <div class="parents_4">
 
       <p class="p1">SAME DAY DELIVERY</p>
-      <p class="p2">Mrs. Fields Sunshine Basket Large $105</p>
+      <p class="p2">Mrs. Fields Sunshine Basket<br> Large $105</p>
       <p class="p3">SIZE INFORMATION:</p>
 
       <div class="griddiv">
