--- a/FARTHAR_GIFT_HTML/FDG6.html
+++ b/FARTHAR_GIFT_HTML/FDG6.html
@@ -170,7 +170,7 @@ All Flowers</a>
      <div class="parents_4">
 
       <p class="p1">SAME DAY DELIVERY</p>
-      <p class="p2">Braided Money Tree Grove<br> Bonsai $105</p>
+      <p class="p2">Braided Money Tree <br>Grove  Bonsai $105</p>
       <p class="p3">SIZE INFORMATION:</p>
 
       <div class="griddiv">
