--- a/SHOP_PRIDE.html
+++ b/SHOP_PRIDE.html
@@ -338,7 +338,7 @@ All Flowers</a>
 
   <div class="summer_parents-2">
 
-    <a href="../../../../PRIDE_HTML/PRIDE.html">
+    <a href="../../../../PRIDE_HTML/PRIDE7.html">
     <div class="C">
   <img src="../Flowerimg/J-6022P_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
