--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/index.css">
+    <link rel="shortcut icon" href="./Flowerimg/0868_PF_Summer25-Site_Summer_SWAG_Flip_v2 copy.webp" type="image/x-icon">
 </head>
 <body>
      <div class="top-banner">
