--- a/FARTHAR_GIFT_HTML/FDG1.html
+++ b/FARTHAR_GIFT_HTML/FDG1.html
@@ -170,7 +170,7 @@ All Flowers</a>
      <div class="parents_4">
 
       <p class="p1">SAME DAY DELIVERY</p>
-      <p class="p2">Rainbow Garden of Blooms $95</p>
+      <p class="p2">Rainbow Garden of Blo<br>oms $95</p>
       <p class="p3">SIZE INFORMATION:</p>
 
       <div class="griddiv">
