--- a/FARTHAR_GIFT_HTML/FDG2.html
+++ b/FARTHAR_GIFT_HTML/FDG2.html
@@ -170,7 +170,7 @@ All Flowers</a>
      <div class="parents_4">
 
       <p class="p1">SAME DAY DELIVERY</p>
-      <p class="p2">Sweet Tooth Belgian Chocolate–<br>Dipped Treat Tray $95</p>
+      <p class="p2">Sweet Tooth Belgian Choco<br>late Dipped Treat Tray $95</p>
       <p class="p3">SIZE INFORMATION:</p>
 
       <div class="griddiv">
