--- a/GRADUATION_HTML/GAS6.html
+++ b/GRADUATION_HTML/GAS6.html
@@ -170,7 +170,7 @@ All Flowers</a>
      <div class="parents_4">
 
       <p class="p1">SAME DAY DELIVERY</p>
-      <p class="p2">Romantic Long Stem Red Rose<br> Bouquet Bundles $225</p>
+      <p class="p2">Romantic Long Stem Red <br>Rose Bouquet Bundles $225</p>
       <p class="p3">SIZE INFORMATION:</p>
 
       <div class="griddiv">
