--- a/MODERN_HTML/MF4.html
+++ b/MODERN_HTML/MF4.html
@@ -170,7 +170,7 @@ All Flowers</a>
      <div class="parents_4">
 
       <p class="p1">SAME DAY DELIVERY</p>
-      <p class="p2">Touch of Honey Anemone $90</p>
+      <p class="p2">Touch of Honey Anemone<br> $90</p>
       <p class="p3">SIZE INFORMATION:</p>
 
       <div class="griddiv">
