--- a/MODERN_HTML/MF7.html
+++ b/MODERN_HTML/MF7.html
@@ -170,7 +170,7 @@ All Flowers</a>
      <div class="parents_4">
 
       <p class="p1">SAME DAY DELIVERY</p>
-      <p class="p2">Mesmerizing Ranunculus Bouq<br>uet $60</p>
+      <p class="p2">Mesmerizing Ranunculus<br> Bouquet $60</p>
       <p class="p3">SIZE INFORMATION:</p>
 
       <div class="griddiv">
