--- a/MODERN_HTML/MF8.html
+++ b/MODERN_HTML/MF8.html
@@ -170,7 +170,7 @@ All Flowers</a>
      <div class="parents_4">
 
       <p class="p1">SAME DAY DELIVERY</p>
-      <p class="p2">Dressed Up Anemone Bouquet<br> $80</p>
+      <p class="p2">Dressed Up Anemone <br>Bouquet $80</p>
       <p class="p3">SIZE INFORMATION:</p>
 
       <div class="griddiv">
