--- a/SUMMAR_HTML/summarf2.html
+++ b/SUMMAR_HTML/summarf2.html
@@ -170,7 +170,7 @@ All Flowers</a>
      <div class="parents_4">
 
       <p class="p1">SAME DAY DELIVERY</p>
-      <p class="p2">Sweet As Can Be Bouquet $65</p>
+      <p class="p2">Sweet As Can Be Bouquet<br> $65</p>
       <p class="p3">SIZE INFORMATION:</p>
 
       <div class="griddiv">
