--- a/Summar_flower.html
+++ b/Summar_flower.html
@@ -174,7 +174,7 @@ All Flowers</a>
       </div>
       </div>
 
-
+      <div class="parentsmain_5">
       <div class="parents_5">
         <p class="Summer_text">Summer Collection: Flowers, Plants & Gifts</p>
         <p class="Summer_text_2"><p>Summer is the perfect time to enjoy the outdoors and show your loved ones how much you care. Here at Proflowers, we have everything you need to make</p><p>the season bright, from beautiful<u>summer flowers</u>  and plants to unique <u>summer gifts</u>. Our flowers are fresh and vibrant, while our <u>summer plants</u> are sure to</p><p>please. And for those who want to really impress their loved ones, we have a selection of top-quality gifts that will make them smile from June all the way</p> through August. Take a look at our summer collection today and send an incredible seasonal gift today.</p>
@@ -240,7 +240,7 @@ All Flowers</a>
     </div>
   </div>
 </div>
-
+</div>
 
 <div class="parents_7">
 
