--- a/Farther_gift.html
+++ b/Farther_gift.html
@@ -175,6 +175,7 @@ All Flowers</a>
       </div>
 
        <div class="parentsmain_5">
+       <div class="parentsmain_5">
       <div class="parents_5">
         <p class="Summer_text">Father's Day Gifts</p>
         <p class="Summer_text_2"><p>As June rolls around, it's time to begin looking for the perfect Father's Day gifts. At Proflowers, we provide Father's Day gift delivery so you</p> can send your dad a thoughtful present on his special day.</p>
@@ -239,6 +240,7 @@ All Flowers</a>
       <label><input type="checkbox"> Above $90</label>
     </div>
   </div>
+</div>
 </div>
 </div>
 
