--- a/Local_shop.html
+++ b/Local_shop.html
@@ -173,7 +173,7 @@ All Flowers</a>
         <div class="shopnow">SHOPE NOW</div>
       </div>
       </div>
-
+ <div class="parentsmain_5">
 
       <div class="parents_5">
         <p class="Summer_text">Local Florist Delivered Flowers</p>
@@ -240,7 +240,7 @@ All Flowers</a>
     </div>
   </div>
 </div>
-
+</div>
 
 <div class="parents_7">
 
