--- a/Modern_flower.html
+++ b/Modern_flower.html
@@ -174,7 +174,7 @@ All Flowers</a>
       </div>
       </div>
 
-
+     <div class="parentsmain_5">
       <div class="parents_5">
         <p class="Summer_text">Must-Have Modern Bouquets</p>
         <p class="Summer_text_2">Shop our must-have collection of curated modern bouquets, these are the flowers of the moment that will be sure to make a statement.
@@ -240,7 +240,7 @@ All Flowers</a>
     </div>
   </div>
 </div>
-
+</div>
 
 <div class="parents_7">
 
