--- a/SHOP_PEONIES.html
+++ b/SHOP_PEONIES.html
@@ -174,7 +174,7 @@ All Flowers</a>
       </div>
       </div>
 
-
+       <div class="parentsmain_5">
       <div class="parents_5">
         <p class="Summer_text">Peonies and Peony Bouquets</p>
         <p class="Summer_text_2"><p>Peony bouquets are a lovely way to show a friend or loved one that you’re thinking of them. From classic pink and white to more exotic hues like coral and</p><p>mahogany, these blooms are bursting with personality, color, and fragrance, and sure to bring a smile to your special someone’s face. Send peonies today</p><p> to brighten someone’s day or plan ahead for your big day. Whatever you need, Proflowers has you covered with fast, high-quality flower delivery and an</p> assortment of arrangements to choose from.
@@ -240,7 +240,7 @@ All Flowers</a>
     </div>
   </div>
 </div>
-
+</div>
 
 <div class="parents_7">
 
