--- a/SHOP_PRIDE.html
+++ b/SHOP_PRIDE.html
@@ -174,7 +174,7 @@ All Flowers</a>
       </div>
       </div>
 
-
+       <div class="parentsmain_5">
       <div class="parents_5">
         <p class="Summer_text">Celebrate Pride with Flowers and Gifts</p>
         <p class="Summer_text_2"><p>Share your pride with the world and celebrate all LGBTQ+ identities with an array of stunning floral arrangements from Proflowers. Whether</p><p> you’re looking for colorful floral creations, perfect potted plants, gorgeous gift baskets or delicious sweets and treats, you can find your</p><p>perfect Pride gifts online and get them delivered right to your home all month long. Let creativity take the reins when shopping for Pride gifts</p> online by mixing and matching florals that speak to you—the only rules are that there are no rules!
@@ -240,7 +240,7 @@ All Flowers</a>
     </div>
   </div>
 </div>
-
+</div>
 
 <div class="parents_7">
 
