--- a/Shop_brithday.html
+++ b/Shop_brithday.html
@@ -174,7 +174,7 @@ All Flowers</a>
       </div>
       </div>
 
-
+    <div class="parentsmain_5">
       <div class="parents_5">
         <p class="Summer_text">Happy Birthday Flowers</p>
         <p class="Summer_text_2"><p>Nothing brightens a day more than a surprise birthday flowers delivery. Celebrate another turn around the sun with vibrant bouquets filled with gorgeous </p>blooms from Proflowers. Order next day or same day flower delivery and make a loved one smile on their special day.
@@ -240,7 +240,7 @@ All Flowers</a>
     </div>
   </div>
 </div>
-
+</div>
 
 <div class="parents_7">
 
