--- a/graduation.html
+++ b/graduation.html
@@ -174,7 +174,7 @@ All Flowers</a>
       </div>
       </div>
 
-
+ <div class="parentsmain_5">
       <div class="parents_5">
         <p class="Summer_text">Graduation Flowers & Gifts</p>
         <p class="Summer_text_2"><p>A graduation is a momentous occasion that should be celebrated in the highest regard. And whether it is from 8th grade, high school, college, grad school, </p><p>or beyond, sending graduation flowers to help the scholar celebrate is a great gesture! And we at Proflowers have a plethora of arrangements and gifts to</p> choose from for their celebration, so whoever the grad is, we have something perfect for them.
@@ -240,7 +240,7 @@ All Flowers</a>
     </div>
   </div>
 </div>
-
+</div>
 
 <div class="parents_7">
 
