--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ All Flowers</a>
      <p class="happiest_text">happiest of dad's days</p>
      <p class="happiest_text-1">Say thanks to day with a special gift this Farther's Day ,June<br>15th. </p>
 
-     <a href="../../../../Farther_gift.html">
+     <a  href="../../../../Farther_gift.html">
        <button class="button_3">SHOP FATHER'S DAY</button>
        </a>
     </div>
@@ -409,7 +409,7 @@ All Flowers</a>
        <p class="pnk_text">don't miss peonies season!</p>
        <p class="pank_txt_1">The ever-popular  peonies only bloom for a limited time, order today.</p>
 
-       <a href="../../../../SHOP_PEONIES.html">
+       <a class="card_btn" href="../../../../SHOP_PEONIES.html">
         <button class="button_7">SHOP PEONIES</button>
         </a>
         
@@ -504,7 +504,7 @@ All Flowers</a>
        <p class="bpl_text">bursting  with pride</p>
        <p class="bpl_txt_1">Pride gifts and flowers full of color that they'|| love.</p>
 
-       <a href="../../../../SHOP_PRIDE.html">
+       <a class="card_btn-1" href="../../../../SHOP_PRIDE.html">
         <button class="button_7">SHOP PRIDE</button>
         </a>
         
