--- a/LOCALSHOP_HTML/LS7.html
+++ b/LOCALSHOP_HTML/LS7.html
@@ -161,11 +161,28 @@ All Flowers</a>
   <div class="parents_2">
 
     <div class="parents_3">
-      <div class="Z">
+      <!--div class="Z">
  <img src="../Flowerimg/S5274S_LOL_preset_proflowers-mx-tile-wide-sv-new.jpg" class="summer_img">
-       </div>
-       
+       </div--->
+
+       <div class="gallery">
+
+    <img img src="../Flowerimg/Arrow Down.svg"  class="arrow left-arrow" onclick="prevImage()">
+    <div class="main-image">
+      <img id="mainDisplay" src="../Flowerimg/S5274S_LOL_preset_proflowers-mx-tile-wide-sv-new.jpg"   class="summer_img" alt="Main Image">
     </div>
+    <img  src="../Flowerimg/Arrow Down.svg" class="arrow right-arrow"   onclick="nextImage()">
+
+  </div>
+
+  <div class="thumbnails">
+    <img src="../Flowerimg/S5274S_LOL_preset_proflowers-mx-tile-wide-sv-new.jpg" onclick="showImage(0)" class="active">
+    <img src="../Flowerimg/L10img.webp" onclick="showImage(1)">
+    <img src="../Flowerimg/L8img.webp" onclick="showImage(2)">
+    <img src="../Flowerimg/L11img.webp" onclick="showImage(3)">
+  </div>
+</div>
+       
 
      <div class="parents_4">
 
@@ -365,4 +382,32 @@ CCPA</span>
     </div>
 
 </body>
+<script>
+    const images = [
+"../Flowerimg/S5274S_LOL_preset_proflowers-mx-tile-wide-sv-new.jpg"  ,
+     "../Flowerimg/L10img.webp",
+      "../Flowerimg/L8img.webp",
+      "../Flowerimg/L11img.webp",
+    ];
+
+    const thumbnails = document.querySelectorAll('.thumbnails img');
+    let currentIndex = 0;
+
+    function showImage(index) {
+      currentIndex = index;
+      document.getElementById('mainDisplay').src = images[index];
+      thumbnails.forEach(img => img.classList.remove('active'));
+      thumbnails[index].classList.add('active');
+    }
+
+    function prevImage() {
+      currentIndex = (currentIndex - 1 + images.length) % images.length;
+      showImage(currentIndex);
+    }
+
+    function nextImage() {
+      currentIndex = (currentIndex + 1) % images.length;
+      showImage(currentIndex);
+    }
+  </script>
 </html>
