--- a/GRADUATION_HTML/GAS7.html
+++ b/GRADUATION_HTML/GAS7.html
@@ -170,16 +170,17 @@ All Flowers</a>
     <img img src="../Flowerimg/Arrow Down.svg"  class="arrow left-arrow" onclick="prevImage()">
 
     <div class="main-image">
-      <img id="mainDisplay" src="../Flowerimg/B59ECH_LOL_preset_proflowers-mx-tile-wide-sv-new.webp"  class="summer_img" alt="Main Image">
+      <img id="mainDisplay" src="../Flowerimg/FV037D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp"   class="summer_img" alt="Main Image">
     </div>
     <img  src="../Flowerimg/Arrow Down.svg" class="arrow right-arrow"   onclick="nextImage()">
 
   </div>
 
   <div class="thumbnails">
-    <img src="../Flowerimg/B59ECH_LOL_preset_proflowers-mx-tile-wide-sv-new.webp"  onclick="showImage(0)" class="active">
-    <img src="../Flowerimg/ro7.webp" onclick="showImage(1)">
-     <img src="../Flowerimg/ro6.webp" onclick="showImage(2)">
+    <img src="../Flowerimg/FV037D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp"   onclick="showImage(0)" class="active">
+    <img src= "../Flowerimg/p3_img.webp" onclick="showImage(1)">
+     <img src="../Flowerimg/pg3m.webp" onclick="showImage(2)">
+     <img src= "../Flowerimg/p4_img.webp"onclick="showImage(3)">
   </div>
     </div>
        
@@ -385,9 +386,10 @@ CCPA</span>
 
 <script>
     const images = [
-"../Flowerimg/B59ECH_LOL_preset_proflowers-mx-tile-wide-sv-new.webp",
-     "../Flowerimg/ro7.webp",
-      "../Flowerimg/ro6.webp",
+"../Flowerimg/FV037D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" ,
+     "../Flowerimg/p3_img.webp",
+      "../Flowerimg/pg3m.webp",
+       "../Flowerimg/p4_img.webp",
      
     ];
 
