--- a/SUMMAR_HTML/summarf1.html
+++ b/SUMMAR_HTML/summarf1.html
@@ -171,7 +171,7 @@ All Flowers</a>
 
     <img img src="../Flowerimg/Arrow Down.svg"  class="arrow left-arrow" onclick="prevImage()">
     <div class="main-image">
-      <img id="mainDisplay" src="../Flowerimg/R5661D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img" alt="Main Image">
+      <img id="mainDisplay" src="../Flowerimg/R5661D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp"  alt="Main Image">
     </div>
     <img  src="../Flowerimg/Arrow Down.svg" class="arrow right-arrow"   onclick="nextImage()">
 
